[tool.poetry]
name = "starknet-interface-generator"
version = "0.1.4"
description = "Generate interfaces for your Starknet contracts"
authors = ["msaug <msaug@protonmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "starknet_interface_generator", from = "src"},{include="src"}]

[tool.poetry.dependencies]
python = "^3.7"
cairo-lang = "^0.10.0"
toml = "0.10.2"
click = "8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
starknet-interface-generator = 'src.cli:main'